# rat-connectome

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: connectome_config.json  environment.yml  subjects.json
docs/: Docker.md  GitHub.md  QUICKSTART.md  README.md  api.md  installation.md
scripts/: batch_connectome_matrix.sh  batch_gaussian_fitting.sh  run_connectome_matrix.sh  run_gaussian_fitting.sh  run_statistics_analysis.sh
source/: __init__.py  connectome_matrix_pipeline.py  gaussian_tau_pipeline.py  logging_config.py  statistics_utils.py  streamline_utils.py  structural_connectivity_analysis.py
tests/: test_gaussian_tau_pipeline.py  test_streamline_utils.py
validations/: validate_environment.py  validate_matrices.py
